--- a/video_preview_config.json
+++ b/video_preview_config.json
@@ -1,4 +1,4 @@
 {
-  "last_save_dir": "F:/手术视频-浙大团队分析/Storz/frame",
-  "save_counter": 20
+  "last_save_dir": "F:/手术视频-浙大团队分析/海泰/frame",
+  "save_counter": 26
 }
